--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "chai": "^4.5.0",
     "dotenv": "^16.4.7",
     "hardhat": "^2.22.18"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.2.0"
   }
 }
